sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:7: error: not found: value v
    v=getValeur(i)
    ^AlgInsertionSort:10: error: not found: value v
      if (!plusPetitQue(j,v)){
                          ^AlgInsertionSort:15: error: not found: value v
    setValeur(l,v)
                ^