sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var n: Int=getNombreValeurs-1
  var h: Int=0
  
  for (i<- 1 to n){
    v=getValeur(i)
    var l: Int=i
    for (j<- i-1 to 0 by -1){
      if (!plusPetitQue(j,v)){
        copie(j,j+1)
        l=j
      }
    }
    setValeur(l,v)
  }
}
